<resources>
    <string name="app_name">SIA Print</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_barang">Barang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username_or_email">Username atau Email</string>
    <string name="password">password</string>
    <string name="lupa_password">Lupa password</string>
    <string name="daftar">Tidak punya akun? Daftar</string>
    <string name="copright">SIAPrint@2021</string>
    <string name="register">Daftar</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="desc_lupa_password">Tidak masalah! Masukkan email Anda di bawah ini dan kami akan mengirimkan instruksi untuk mengatur ulang kata sandi Anda.</string>
    <string name="kirim_intruksi">Kirim Intruksi</string>
    <string name="upload">Upload</string>
    <string name="keranjang">Keranjang</string>
    <string name="dec_upload">Pilih document max 5</string>
    <string name="hitung">Hitung</string>
    <string name="menu_logout">Logout</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Batal</string>
    <string name="err_not_found">error not found</string>
    <string name="error_api">Kesalahan terjadi!</string>
    <string name="error_api_parsing">Kesalahan parsing data!</string>
    <string name="menu_status">Status</string>
    <string name="batal">batal</string>
    <string name="bayar">bayar</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="masukannoovo">Masukan No OVO</string>
    <string name="detail">Detail</string>
    <string name="no_ovo_masih_kosong">No OVO tidak boleh kosong!</string>
    <string name="next">Selanjutnya</string>
    <string name="alamatyangdipilih">Alamat yang dipilih</string>
    <string name="data_print_belum_dilengkapi">Data print belum dilengkapi</string>
    <string name="print_tinta">Print Tinta</string>
    <string name="print_laser">Print Laser</string>
    <string name="print">1. Print</string>
    <string name="ukuran_kertas">2. Ukuran Kertas</string>
    <string name="jenis_kertas">3. Jenis Kertas</string>
    <string name="pages">pages</string>
    <string name="all">All</string>
    <string name="pages1">Pages</string>
    <string name="halaman">4. Halaman</string>
    <string name="desc_halaman">** masukkan range halaman atau per halaman cnth : 1-7 atau 1,2,6,7</string>
    <string name="copy">5. Copy</string>
    <string name="finishing">6. Finishing</string>
    <string name="pesan">7. Pesan</string>
    <string name="pesan_desc">isi pesan untuk dokumen ini</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="pickup">Pickup by customer</string>
    <string name="delivery_jne">Delivery JNE</string>
    <string name="total">Total</string>
    <string name="proses">Proses</string>
    <string name="warning_tipe_print">Tipe print belum dipilih.</string>
</resources>