<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_layout_atas_samping_bawah"
    tools:context=".ui.register.RegisterFragment">

    <EditText
        android:id="@+id/etEmail"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUlangiPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:hint="@string/ulangi_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@id/etUlangiPassword"
        android:text="@string/register"
        android:theme="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>