<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.dalamsyah.siaprint.ui.print.PrintViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.print.PrintDetailFragment">

        <ScrollView
            android:id="@+id/scrollView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/print"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <RadioGroup
                        android:id="@+id/rgPrint"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rbLaser"
                            android:text="@string/print_laser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <RadioButton
                            android:id="@+id/rbTinta"
                            android:text="@string/print_tinta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </RadioGroup>

                    <TextView
                        android:text="@string/ukuran_kertas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <Spinner
                        android:id="@+id/spUkuranKertas"
                        android:spinnerMode="dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/jenis_kertas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <Spinner
                        android:id="@+id/spJenisKertas"
                        android:spinnerMode="dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/halaman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioGroup
                            android:id="@+id/rgHalaman"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/rbAll"
                                android:checked="true"
                                android:text="@string/all"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <RadioButton
                                android:id="@+id/rbPage"
                                android:text="@string/pages1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </RadioGroup>

                        <EditText
                            android:id="@+id/etPage"
                            android:hint="@string/pages"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <TextView
                        android:text="@string/desc_halaman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/etCopy"
                        android:text="@={viewModel.copy}"
                        android:hint="copy"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/finishing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <Spinner
                        android:id="@+id/spFinishing"
                        android:spinnerMode="dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/pesan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/etPesan"
                        android:hint="@string/pesan_desc"
                        android:inputType="textMultiLine"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:scrollHorizontally="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvGrandTotal"
                        android:padding="@dimen/padding_layout_atas_samping_bawah"
                        android:text="Total : Rp 0"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/btnBatal"
            android:layout_marginLeft="@dimen/padding_layout_atas_samping_bawah"
            android:layout_marginRight="@dimen/padding_layout_atas_samping_bawah"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnNext"
            android:text="@string/batal"
            android:textColor="@color/text_grey"
            android:theme="@style/ButtonSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_marginRight="@dimen/padding_layout_atas_samping_bawah"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btnBatal"
            android:text="@string/proses"
            android:theme="@style/ButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
