<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_layout_atas_samping_bawah"
    tools:context=".ui.forgotpassword.ForgotPasswordFragment">

    <TextView
        android:id="@+id/tvDesc"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/desc_lupa_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:text="@string/kirim_intruksi"
        android:theme="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>