<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="mainViewModel"
            type="com.dalamsyah.siaprint.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.print.PrintFragment">

        <TextView
            android:id="@+id/labelPengiriman"
            android:text="@string/pengiriman"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/rgPengiriman"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toBottomOf="@id/labelPengiriman"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbPickup"
                android:text="@string/pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rbJNE"
                android:text="@string/delivery_jne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/layout_item_keranjang"
            app:layout_constraintTop_toBottomOf="@id/rgPengiriman"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/labelTotal"
            android:text="@string/total"
            app:layout_constraintTop_toTopOf="@id/btnNext"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/padding_layout_atas_samping_bawah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvTotal"
            android:text="@={mainViewModel.grandTotalText}"
            app:layout_constraintTop_toBottomOf="@id/labelTotal"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/padding_layout_atas_samping_bawah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_marginRight="@dimen/padding_layout_atas_samping_bawah"
            android:layout_marginLeft="@dimen/padding_layout_atas_samping_bawah"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/next"
            android:theme="@style/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>