<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.upload.UploadFragment">

    <TextView
        android:layout_margin="@dimen/padding_layout_atas_samping_bawah"
        android:id="@+id/tvDesc"
        android:text="@string/dec_upload"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/layout_item_upload"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintBottom_toTopOf="@id/btnHitung"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/btnUpload"
        android:layout_marginLeft="@dimen/padding_layout_atas_samping_bawah"
        android:layout_marginRight="@dimen/padding_layout_atas_samping_bawah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnHitung"
        android:text="@string/upload"
        android:textColor="@color/text_grey"
        android:theme="@style/ButtonSecondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnHitung"
        android:layout_marginRight="@dimen/padding_layout_atas_samping_bawah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btnUpload"
        android:text="@string/hitung"
        android:theme="@style/ButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>